@@ -261,6 +261,13 @@ class PanoramaConf
 		// End of address groups extraction
 
         //
+        // Extract application
+        //
+        $tmp = DH::findFirstElementOrCreate('application', $this->sharedroot);
+        $this->appStore->load_application_custom_from_domxml($tmp);
+        // End of application extraction
+
+        //
         // Extract application groups
         //
         $tmp = DH::findFirstElementOrCreate('application-group', $this->sharedroot);
