@@ -218,6 +218,13 @@ class VirtualSystem
             // End of <service-group> extraction
 
             //
+            // Extract application
+            //
+            $tmp = DH::findFirstElementOrCreate('application', $xml);
+            $this->appStore->load_application_custom_from_domxml($tmp);
+            // End of address extraction
+
+            //
             // Extract application groups
             //
             $tmp = DH::findFirstElementOrCreate('application-group', $xml);
