@@ -144,7 +144,7 @@ class AppStore extends ObjStore
             if( $appx->nodeType != XML_ELEMENT_NODE )
                 continue;
 
-            $appName= DH::findAttribute('name', $appx);
+            $appName = DH::findAttribute('name', $appx);
             if( $appName === FALSE )
                 derr("app name not found\n");
 
@@ -154,112 +154,144 @@ class AppStore extends ObjStore
             $app = $this->nameIndex[$appName];
 
             #xpath /predefined/default
+            $timeoutcur = DH::findFirstElement('timeout', $appx);
+            if( $timeoutcur !== false )
+            {
+                $app->timeout = $timeoutcur->textContent;
+            }
+            $tcptimeoutcur = DH::findFirstElement('tcp-timeout', $appx);
+            if( $tcptimeoutcur !== false )
+            {
+                $app->tcp_timeout = $tcptimeoutcur->textContent;
+            }
+            $udptimeoutcur = DH::findFirstElement('udp-timeout', $appx);
+            if( $udptimeoutcur !== false )
+            {
+                $app->udp_timeout = $udptimeoutcur->textContent;
+            }
+            $tcp_half_timeoutcur = DH::findFirstElement('tcp-half-closed-timeout', $appx);
+            if( $tcp_half_timeoutcur !== false )
+            {
+                $app->tcp_half_closed_timeout = $tcp_half_timeoutcur->textContent;
+            }
+            $tcp_wait_timeoutcur = DH::findFirstElement('tcp-time-wait-timeout', $appx);
+            if( $tcp_wait_timeoutcur !== false )
+            {
+                $app->tcp_time_wait_timeout = $tcp_wait_timeoutcur->textContent;
+            }
+
             $cursor = DH::findFirstElement('default', $appx);
-            if ( $cursor === false )
+            if( $cursor === FALSE )
                 continue;
 
             $protocur = DH::findFirstElement('ident-by-ip-protocol', $cursor);
-            if( $protocur !== false )
+            if( $protocur !== FALSE )
             {
                 $app->proto = $protocur->textContent;
             }
 
             $icmpcur = DH::findFirstElement('ident-by-icmp-type', $cursor);
-            if( $icmpcur !== false )
+            if( $icmpcur !== FALSE )
             {
                 $app->icmpsub = $icmpcur->textContent;
             }
 
-            $cursor = DH::findFirstElement('port', $cursor);
-            if( $cursor === false )
-                continue;
-
-            foreach( $cursor->childNodes as $portx )
+            $icmp6cur = DH::findFirstElement('ident-by-icmp6-type', $cursor);
+            if( $icmp6cur !== FALSE )
             {
-                if( $portx->nodeType != XML_ELEMENT_NODE )
-                    continue;
+                $app->icmp6sub = $icmp6cur->textContent;
+            }
 
-                /** @var  $portx DOMElement */
-
-                $ex = explode('/', $portx->textContent );
-
-                if( count($ex) != 2 )
-                    derr('unsupported port description: '.$portx->textContent);
-
-                if( $ex[0] == 'tcp' )
+            $cursor = DH::findFirstElement('port', $cursor);
+            if( $cursor !== FALSE )
+            {
+                foreach( $cursor->childNodes as $portx )
                 {
-                    $exports = explode(',', $ex[1]);
-                    $ports = Array();
+                    if( $portx->nodeType != XML_ELEMENT_NODE )
+                        continue;
 
-                    if( count($exports) < 1 )
-                        derr('unsupported port description: '.$portx->textContent);
+                    /** @var  $portx DOMElement */
 
-                    foreach( $exports as &$sport )
+                    $ex = explode('/', $portx->textContent);
+
+                    if( count($ex) != 2 )
+                        derr('unsupported port description: ' . $portx->textContent);
+
+                    if( $ex[0] == 'tcp' )
                     {
-                        if( $sport == 'dynamic')
-                        {
-                            $ports[] = Array( 0 => 'dynamic' );
-                            continue;
-                        }
-                        $tmpex = explode('-', $sport);
-                        if( count($tmpex) < 2 )
-                        {
-                            $ports[] = Array( 0 => 'single' , 1 => $sport );
-                            continue;
-                        }
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
 
-                        $ports[] = Array( 0 => 'range' , 1 => $tmpex[0], 2 => $tmpex[1] );
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: ' . $portx->textContent);
 
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic' )
+                            {
+                                $ports[] = Array(0 => 'dynamic');
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array(0 => 'single', 1 => $sport);
+                                continue;
+                            }
+
+                            $ports[] = Array(0 => 'range', 1 => $tmpex[0], 2 => $tmpex[1]);
+
+                        }
+                        //print_r($ports);
+
+                        if( $app->tcp === null )
+                            $app->tcp = $ports;
+                        else
+                            $app->tcp = array_merge($app->tcp, $ports);
                     }
-                    //print_r($ports);
-
-                    if( $app->tcp === null )
-                        $app->tcp = $ports;
-                    else
-                        $app->tcp = array_merge($app->tcp, $ports);
-                }
-                elseif( $ex[0] == 'udp' )
-                {
-                    $exports = explode(',', $ex[1]);
-                    $ports = Array();
-
-                    if( count($exports) < 1 )
-                        derr('unsupported port description: '.$portx->textContent);
-
-                    foreach( $exports as &$sport )
+                    elseif( $ex[0] == 'udp' )
                     {
-                        if( $sport == 'dynamic')
-                        {
-                            $ports[] = Array( 0 => 'dynamic' );
-                            continue;
-                        }
-                        $tmpex = explode('-', $sport);
-                        if( count($tmpex) < 2 )
-                        {
-                            $ports[] = Array( 0 => 'single' , 1 => $sport );
-                            continue;
-                        }
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
 
-                        $ports[] = Array( 0 => 'range' , 1 => $tmpex[0], 2 => $tmpex[1] );
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: ' . $portx->textContent);
 
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic' )
+                            {
+                                $ports[] = Array(0 => 'dynamic');
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array(0 => 'single', 1 => $sport);
+                                continue;
+                            }
+
+                            $ports[] = Array(0 => 'range', 1 => $tmpex[0], 2 => $tmpex[1]);
+
+                        }
+                        //print_r($ports);
+
+                        if( $app->udp === null )
+                            $app->udp = $ports;
+                        else
+                            $app->udp = array_merge($app->udp, $ports);
                     }
-                    //print_r($ports);
-
-                    if( $app->udp === null )
-                        $app->udp = $ports;
+                    elseif( $ex[0] == 'icmp' )
+                    {
+                        $app->icmp = $ex[1];
+                    }
+                    elseif( $ex[0] == 'icmp6' )
+                    {
+                        $app->icmp6 = $ex[1];
+                    }
                     else
-                        $app->udp = array_merge($app->udp, $ports);
+                        derr('unsupported port description: ' . $portx->textContent);
                 }
-                elseif( $ex[0] == 'icmp' )
-                {
-                    $app->icmp = $ex[1];
-                }
-                elseif( $ex[0] == 'icmp6' )
-                {
-                    $app->icmp6 = $ex[1];
-                }
-                else
-                    derr('unsupported port description: '.$portx->textContent);
             }
 
             #xpath /predefined
@@ -457,6 +489,287 @@ class AppStore extends ObjStore
         }
     }
 
+    public function load_application_custom_from_domxml($xmlDom )
+    {
+        foreach( $xmlDom->childNodes as $appx )
+        {
+            if( $appx->nodeType != XML_ELEMENT_NODE ) continue;
+
+            $appName = DH::findAttribute('name', $appx);
+            if( $appName === FALSE )
+                derr("ApplicationCustom name not found in XML: ", $appx);
+
+            print "HALLO: ECHT jetztapplication custom name: ".$appName."\n";
+
+            $app = new App($appName, $this);
+            $app->type = 'application-custom';
+            $this->add($app);
+
+            //TODO: not implemented yet: <description>custom_app</description>
+
+            $signaturecur = DH::findFirstElement('signature', $appx);
+            if( $signaturecur !== false )
+            {
+                $app->custom_signature = true;
+            }
+
+            $parentappcur = DH::findFirstElement('parent-app', $appx);
+            if( $parentappcur !== false )
+            {
+                //TODO: implementation needed of $app->parent_app
+                #$app->parent_app = $parentappcur->textContent;
+            }
+
+            $timeoutcur = DH::findFirstElement('timeout', $appx);
+            if( $timeoutcur !== false )
+            {
+                $app->timeout = $timeoutcur->textContent;
+            }
+            $tcptimeoutcur = DH::findFirstElement('tcp-timeout', $appx);
+            if( $tcptimeoutcur !== false )
+            {
+                $app->tcp_timeout = $tcptimeoutcur->textContent;
+            }
+            $udptimeoutcur = DH::findFirstElement('udp-timeout', $appx);
+            if( $udptimeoutcur !== false )
+            {
+                $app->udp_timeout = $udptimeoutcur->textContent;
+            }
+            $tcp_half_timeoutcur = DH::findFirstElement('tcp-half-closed-timeout', $appx);
+            if( $tcp_half_timeoutcur !== false )
+            {
+                $app->tcp_half_closed_timeout = $tcp_half_timeoutcur->textContent;
+            }
+            $tcp_wait_timeoutcur = DH::findFirstElement('tcp-time-wait-timeout', $appx);
+            if( $tcp_wait_timeoutcur !== false )
+            {
+                $app->tcp_time_wait_timeout = $tcp_wait_timeoutcur->textContent;
+            }
+
+            $cursor = DH::findFirstElement('default', $appx);
+            if ( $cursor === false )
+                continue;
+
+            $protocur = DH::findFirstElement('ident-by-ip-protocol', $cursor);
+            if( $protocur !== false )
+            {
+                $app->proto = $protocur->textContent;
+            }
+
+            $icmpcur = DH::findFirstElement('ident-by-icmp-type', $cursor);
+            if( $icmpcur !== false )
+            {
+                $icmptype = DH::findFirstElement('type', $icmpcur);
+                if( $icmptype !== false )
+                {
+                    $app->icmpsub = $icmptype->textContent;
+                }
+                //TODO: <code>0</code>
+            }
+
+            $icmp6cur = DH::findFirstElement('ident-by-icmp6-type', $cursor);
+            if( $icmp6cur !== false )
+            {
+                $icmp6type = DH::findFirstElement('type', $icmp6cur);
+                if( $icmp6type !== false )
+                {
+                    $app->icmp6sub = $icmp6type->textContent;
+                }
+                //TODO: <code>0</code>
+            }
+
+            $cursor = DH::findFirstElement('port', $cursor);
+            if( $cursor !== false )
+            {
+                foreach( $cursor->childNodes as $portx )
+                {
+                    if( $portx->nodeType != XML_ELEMENT_NODE )
+                        continue;
+
+                    /** @var  $portx DOMElement */
+
+                    $ex = explode('/', $portx->textContent );
+
+                    if( count($ex) != 2 )
+                        derr('unsupported port description: '.$portx->textContent);
+
+                    if( $ex[0] == 'tcp' )
+                    {
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
+
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: '.$portx->textContent);
+
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic')
+                            {
+                                $ports[] = Array( 0 => 'dynamic' );
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array( 0 => 'single' , 1 => $sport );
+                                continue;
+                            }
+
+                            $ports[] = Array( 0 => 'range' , 1 => $tmpex[0], 2 => $tmpex[1] );
+
+                        }
+                        //print_r($ports);
+
+                        if( $app->tcp === null )
+                            $app->tcp = $ports;
+                        else
+                            $app->tcp = array_merge($app->tcp, $ports);
+                    }
+                    elseif( $ex[0] == 'udp' )
+                    {
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
+
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: '.$portx->textContent);
+
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic')
+                            {
+                                $ports[] = Array( 0 => 'dynamic' );
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array( 0 => 'single' , 1 => $sport );
+                                continue;
+                            }
+
+                            $ports[] = Array( 0 => 'range' , 1 => $tmpex[0], 2 => $tmpex[1] );
+
+                        }
+                        //print_r($ports);
+
+                        if( $app->udp === null )
+                            $app->udp = $ports;
+                        else
+                            $app->udp = array_merge($app->udp, $ports);
+                    }
+                    elseif( $ex[0] == 'icmp' )
+                    {
+                        $app->icmp = $ex[1];
+                    }
+                    elseif( $ex[0] == 'icmp6' )
+                    {
+                        $app->icmp6 = $ex[1];
+                    }
+                    else
+                        derr('unsupported port description: '.$portx->textContent);
+                }
+            }
+
+
+            $app->app_filter_details = array();
+
+            $tmp = DH::findFirstElement('category', $appx);
+            if( $tmp !== false )
+            {
+                $app->category = $tmp->textContent;
+            }
+
+            $tmp = DH::findFirstElement('subcategory', $appx);
+            if( $tmp !== false )
+            {
+                $app->subCategory = $tmp->textContent;
+            }
+
+            $tmp = DH::findFirstElement('technology', $appx);
+            if( $tmp !== false )
+            {
+                $app->technology = $tmp->textContent;
+            }
+
+            $tmp = DH::findFirstElement('risk', $appx);
+            if( $tmp !== false )
+            {
+                $app->risk = $tmp->textContent;
+            }
+
+            $tmp = DH::findFirstElement('evasive-behavior', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['evasive'] = true;
+            }
+            $tmp = DH::findFirstElement('consume-big-bandwidth', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['excessive-bandwidth'] = true;
+            }
+            $tmp = DH::findFirstElement('used-by-malware', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['used-by-malware'] = true;
+            }
+            $tmp = DH::findFirstElement('able-to-transfer-files', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['transfers-files'] = true;
+            }
+            $tmp = DH::findFirstElement('has-known-vulnerabilities', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['vulnerabilities'] = true;
+            }
+            $tmp = DH::findFirstElement('tunnels-other-apps', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['tunnels-other-apps'] = true;
+            }
+            $tmp = DH::findFirstElement('prone-to-misuse', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['prone-to-misuse'] = true;
+            }
+
+            $tmp = DH::findFirstElement('pervasive-use', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->_characteristics['widely-used'] = true;
+            }
+
+
+
+            $tmp = DH::findFirstElement('virusident-ident', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->virusident = true;
+            }
+            $tmp = DH::findFirstElement('filetype-ident', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->filetypeident = true;
+            }
+            $tmp = DH::findFirstElement('data-ident', $appx);
+            if( $tmp !== false )
+            {
+                if( $tmp->textContent == 'yes' )
+                    $app->fileforward = true;
+            }
+        }
+    }
+
     public function load_application_filter_from_domxml($xmlDom )
     {
         foreach( $xmlDom->childNodes as $appx )
@@ -471,6 +784,7 @@ class AppStore extends ObjStore
             $app->type = 'application-filter';
             $this->add($app);
 
+            //TODO: check if multiple selections are needed
             //only first FILTER is checked
             //what about second/third??
             //- if use array how to get the information via the app filter
